Fixed issue of title not showing up on large screens

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -75,4 +75,6 @@
     .name h1 {font-size: 50px;}
 
     .man-left {display: initial;}
+
+    .title h1 { margin-top: -100px; }
 }
